--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/static/footer.html
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/static/footer.html
@@ -5,29 +5,35 @@
 </head>
 <body>
     <div class="contain">
-        <div class="footer-left">Cégep de Jonquière</div>
-        <div class="footer-right" id="date"></div>
+        <div class="footer-left"><span>Cégep de Jonquière</span> </div>
+        <div class="footer-right"><span id="date"></span></div>
     </div>
 </body>
 </html>
 
 <style>
     .footer-left {
-        display: inline;
+        display: inline-block;
         width: 50%;
+        
     }
 
     .footer-right {
-        display: inline;
-        float: right;
+        display: inline-block;
+        width:49%;
+        
     }
 
     .contain {
         width: 100%;
+        
     }
 
     .contain {
-        font-size: 25px;
+       
+    }
+    #date{
+        float:right;
     }
 </style>
 
