--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ContexteRealisation/Edit.cshtml
@@ -12,7 +12,7 @@
         @Html.HiddenFor(model => model.idContexte)
         @Html.HiddenFor(model => model.idCompetence)
 
-        <div class="horizontal-form form-box single-action">
+        <div class="horizontal-form form-box single">
 
             <h3>Modifier un contexte de réalisation</h3>
 
