--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/CriterePerformance/Edit.cshtml
@@ -13,7 +13,7 @@
         @Html.HiddenFor(model => model.numero)
         @Html.HiddenFor(model => model.idElement)
 
-        <div class="horizontal-form form-box single-action">
+        <div class="horizontal-form form-box single">
 
             <h3>Modifier un critère de performance</h3>
 
