--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Edit.cshtml
@@ -17,7 +17,7 @@
         @Html.HiddenFor(model => model.codeSpecialisation)
         @Html.HiddenFor(model => model.docMinistere)
 
-        <div class="form-horizontal form-box single-action">
+        <div class="form-horizontal form-box single">
             <h1>Modifier un devis ministériel</h1>
             <h3>
                 @Html.DisplayFor(model => model.EnteteProgramme.nom)
