--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/DevisMinistere/Info.cshtml
@@ -4,19 +4,20 @@
     ViewBag.Title = Model.EnteteProgramme.nom;
 }
 
-<div id="super-view">
-    @Html.Action("_TreeView")
+@Html.Action("_TreeView")
 
-    <div id="info-display" class="container-fluid">
-        <div id="info-header">
+<div class="super-view">
+
+    <div class="info-display container-fluid">
+        <div class="info-header">
             <h3>Devis ministériel</h3>
-            <h1>@Html.DisplayFor(model => model.EnteteProgramme.nom)</h1>
+            <h1>@Html.DisplayFor(model => model.nom)</h1>
             <hr />
             <h3><b>@Html.DisplayNameFor(model => model.specialisation) : </b>@Html.DisplayFor(model => model.specialisation)</h3>
             <h3>@Html.DisplayFor(model => model.codeProgramme)-@Html.DisplayFor(model => model.annee)-@Html.DisplayFor(model => model.codeSpecialisation)</h3>
         </div>
 
-        <div id="info-detail">
+        <div class="info-detail">
             <div class="row">
                 <div class="col-md-6">
                     <div class="champ">
