--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Create.cshtml
@@ -11,7 +11,7 @@
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.idCompetence)
 
-        <div class="form-horizontal form-box single-action">
+        <div class="form-horizontal form-box single">
             <h1>Créer un élément de compétence</h1>
 
             <hr />
