--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
 
-    <div class="form-horizontal single-action">
+    <div class="form-horizontal single">
 
         <h1>Supprimer un élément de compétence</h1>
         <h3>@Model.description</h3>
