--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Edit.cshtml
@@ -13,7 +13,7 @@
         @Html.HiddenFor(model => model.numero)
         @Html.HiddenFor(model => model.idCompetence)
 
-        <div class="form-horizontal form-box single-action">
+        <div class="form-horizontal form-box single">
             <h1>Modifier élément de compétence</h1>
 
             <hr />
