--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Delete.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Delete.cshtml
@@ -11,7 +11,7 @@
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.idCompetence)
 
-        <div class="form-horizontal single-action">
+        <div class="form-horizontal single">
 
             <h1>Supprimer un énoncé de compétence</h1>
             <h3>@Model.description</h3>
