--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
@@ -11,7 +11,7 @@
         @Html.AntiForgeryToken()
         @Html.HiddenFor(model => model.idProgramme)
 
-        <div class="form-horizontal form-box single-action">
+        <div class="form-horizontal form-box single">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <h3>Modification d'un programme</h3>
             <hr />
