--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Edit.cshtml
@@ -12,7 +12,7 @@
         @Html.HiddenFor(model => model.idCompetence)
         @Html.HiddenFor(model => model.idDevis)
 
-        <div class="form-horizontal form-box single-action">
+        <div class="form-horizontal form-box single">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <h1>Modifier un énoncé de compétence</h1>
 
