--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Programme";
 }
 
-<div id="super-view">
+<div class="super-view">
     @Html.Action("_TreeView")
     <div id="info-display" class="container-fluid">
         <div id="info-detail">
